New class for handling saving of area. Set theme for 4.0. Temporary UI elements to handle save of area.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,5 +3,8 @@
 
     <string name="hello">Hello World, MyMapViewActivity!</string>
     <string name="app_name">MyMapView</string>
-
+    <string name="discard_label">CANCEL</string>
+    <string name="save_label">DONE</string>
+    <string name="loading">Loading...</string>
+    
 </resources>
