--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -3,7 +3,7 @@
 
     <string name="hello">Hello World, MyMapViewActivity!</string>
     <string name="app_name">MyMapView</string>
-    <string name="discard_label">CANCEL</string>
+    <string name="discard_label">CLEAR</string>
     <string name="save_label">DONE</string>
     <string name="loading">Loading...</string>
     
