--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="app_name">MyMapView</string>
     <string name="discard_label">CLEAR</string>
     <string name="save_label">DONE</string>
+    <string name="remove_label">Remove</string>
     <string name="loading">Loading...</string>
     
 </resources>
