--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="discard_label">CLEAR</string>
     <string name="save_label">DONE</string>
     <string name="remove_label">Remove</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading</string>
+    <string name="add_new_marker">Add New Marker</string>
     
 </resources>
