--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="save_label">DONE</string>
     <string name="remove_label">Remove</string>
     <string name="loading">Loading</string>
-    <string name="add_new_marker">Add New Marker</string>
+    <string name="add_new_marker">Add Your Position</string>
     
 </resources>
