--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="remove_label">Remove</string>
     <string name="loading">Loading</string>
     <string name="add_new_marker">Add Your Position</string>
+    <string name="area_default_name">Area Name</string>
+    <string name="area_default_description">Area Description</string>
     
 </resources>
