--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="hello">Hello World, MyMapViewActivity!</string>
-    <string name="app_name">MyMapView</string>
+    <string name="app_name">MapApp</string>
     <string name="discard_label">CANCEL</string>
     <string name="save_label">DONE</string>
     <string name="remove_label">Remove</string>
@@ -14,7 +13,6 @@
     <string name="clear_all_areas">Clear all areas</string>
     <string name="area_default_name">Area Name</string>
     <string name="area_default_description">Area Description</string>
-    <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
     <string name="title_activity_area_details">AreaDetailsActivity</string>
 
